[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_codegen 
rocket_contrib
serde
serde_derive
serde_json
tera 
diesel = { features = ["postgres"] }
diesel_codegen = { features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
dotenv
