[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.2.4"
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
rocket = "0.5.1"
rocket_codegen = "0.5.1"
rocket_contrib = "0.4.11"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
tera = "1.20.0"

